--- a/src/login/login.component.css
+++ b/src/login/login.component.css
@@ -1,9 +1,8 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
-.card{
-    max-width: 100%;
-    margin: auto;
+.top-pad-100{
+    padding-top: 100px;
   }
   ::ng-deep  .p-dropdown
 {
@@ -57,6 +56,20 @@
 
 .align-right{
   text-align: right;
+}
+
+.p-toast .p-toast-message .p-toast-message-error {
+  border: solid #ff5757;
+  border-width: 0 0 0 6px;
+  color: #202845!important;
+  background: white!important;
+}
+
+.p-toast .p-toast-message.p-toast-message-error {
+  background: white!important;
+  border: solid #ff5757;
+  border-width: 0 0 0 6px;
+  color: black!important;
 }
   
   
