--- a/src/events/events.component.css
+++ b/src/events/events.component.css
@@ -33,6 +33,12 @@
     cursor: pointer;
   }
 
+  .custom-error-message {
+    color: gray;
+    font-size: 18px;
+    text-align: center;
+    margin-top: 200px;
+  }
    
   
 
