--- a/src/register/register.component.html
+++ b/src/register/register.component.html
@@ -1,3 +1,5 @@
+
+<div *ngIf="inviteIdExists; else noParam">
 <div class="row"></div>
     <div class="col-2">&nbsp;</div>
     <div class="col-8">
@@ -5,6 +7,9 @@
       <ng-template pTemplate="header">
           <img alt="Card" width="50%" style="padding: 30px;" height="75%" src="https://cdn.prod.website-files.com/61dfe01d7c07e8e67a2a7a9a/61dfe01d7c07e887742a7aa7_Group%2051.svg" />
       </ng-template>
+      <div class="error" *ngIf="registrationError">
+        Registration unsuccessful. Please reach out to the JEC Board for assistance.
+       </div>
      
         <form [formGroup]="registerForm">
           
@@ -36,28 +41,20 @@
             <label for="gradYear">Grad Year</label>
             <p-dropdown [options]="gradYears" [(ngModel)]="selectedGradYear" formControlName="gradYear" placeholder="Graduation Year" class="p-ddl form-control"></p-dropdown>
          
-            </div>
+          </div>
           <div class="error" *ngIf="registerForm.get('gradYear')?.invalid && registerForm.get('gradYear')?.touched">
             Grad year is required.
            </div>
 
-           <div class="field-radiobutton form-group mb-3 spacer">
+          <div class="field-radiobutton form-group mb-3 spacer">
             <label for="gender">Gender &nbsp; &nbsp;</label>
-            <p-radioButton 
-            name="gender" 
-            value="Male" 
-            formControlName="gender" 
-            inputId="male">
-          </p-radioButton>
-          <label for="male">Male &nbsp; &nbsp;</label>
-          <p-radioButton 
-          name="gender" 
-          value="Female" 
-          formControlName="gender"
-          inputId="female">
-        </p-radioButton>
-        <label for="female">Female</label>
-            </div>
+            <p-radioButton name="gender" value="Male" formControlName="gender" inputId="male"></p-radioButton>
+            <label for="male">Male &nbsp; &nbsp;</label>
+            <p-radioButton name="gender" value="Female" formControlName="gender" inputId="female"></p-radioButton>
+            <label for="female">Female &nbsp; &nbsp;</label>
+            <p-radioButton name="gender" value="Other" formControlName="gender" inputId="other"></p-radioButton>
+            <label for="other">Other</label>
+          </div>
 
           <div class="form-group mb-3 spacer">
             <label for="email">Email</label>
@@ -65,6 +62,25 @@
           </div>
           <div class="error" *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched">
             Email is required/invalid.
+          </div>
+          
+          <div class="form-group mb-3 spacer">
+            <label for="password">Password</label>
+            <input id="password" placeholder="Password" type="password" formControlName="password" class="form-control p-inputtext p-component">
+          </div>
+          <div class="error" *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
+            Password is required and must be at least 6 characters long.
+           </div>
+
+          <div class="form-group mb-3 spacer">
+            <label for="confirmPassword">Confirm Password</label>
+            <input id="confirmPassword" placeholder="Confirm Password" type="password" formControlName="confirmPassword" class="form-control p-inputtext p-component">
+          </div>
+          <div class="error" *ngIf="registerForm.get('confirmPassword')?.invalid && registerForm.get('confirmPassword')?.touched">
+            Confirm Password is required and must be at least 6 characters long.
+           </div>
+          <div class="error" *ngIf="registerForm?.errors?.['mismatch'] && registerForm.get('password')?.touched">
+            Passwords dont match.
            </div>
 
           <div class="form-group mb-3 spacer">
@@ -79,7 +95,7 @@
             <button type="button" class="btn btn-link p-button-text">Cancel</button>
           </div>
             <div class="col-8 align-right">
-              <button type="submit" class="btn btn-primary btn-login p-button-rounded p-component" (click) = "onSubmit()">Register</button>
+              <button type="submit" class="btn btn-primary btn-register p-button-rounded p-component" [disabled]="registerForm.invalid" (click) = "onSubmit()">Register</button>
             </div>
          </div>
         </form>
@@ -90,3 +106,19 @@
       </ng-template>
   </p-card>
   </div>
+</div>
+<ng-template #noParam>
+  <div class="row">
+    <div class="col-2">&nbsp;</div>
+    <div class="col-8">
+     <p-card header="Error">
+        <ng-template pTemplate="header">
+            <img alt="Card" width="50%" style="padding: 30px;" height="75%" src="https://cdn.prod.website-files.com/61dfe01d7c07e8e67a2a7a9a/61dfe01d7c07e887742a7aa7_Group%2051.svg" />
+        </ng-template>
+       
+     <div class="errorBig"> <br/> Invalid link. Please reach out to the JEC Board for assistance.</div>
+     </p-card>
+    </div>  
+  </div>
+</ng-template>
+
