--- a/src/events/events.component.html
+++ b/src/events/events.component.html
@@ -70,7 +70,7 @@
 
     <div *ngIf="showConfirmation" class="row">
         <p-dialog 
-        header="Registeration confirmation" 
+        header="Registration confirmation" 
         [modal]="true"
         [(visible)]="showConfirmation" 
         [style]="{ width: '50rem' }" 
