--- a/src/login/login.component.html
+++ b/src/login/login.component.html
@@ -11,15 +11,27 @@
           <div class="form-group mb-3 spacer">
               <input id="email" type="email" placeholder="Email" formControlName="email" class="form-control p-inputtext p-component">
           </div>
+          <div class="error" *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
+            Email is required/invalid.
+          </div>
           
           <div class="form-group mb-3 spacer">
             <!-- <label for="password">Password</label> -->
             <input id="password" type="password" placeholder="Password" formControlName="password" class="form-control p-password p-component">
           </div>
+          <div class="error" *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
+            Password is required.
+          </div>
+          
+
           <div class="form-group mb-3">
             <label for="city">Chapter</label>
             <p-dropdown [options]="chapters" formControlName="chapter" placeholder="Select a Chapter" class="p-ddl form-control"></p-dropdown>
           </div>
+          <div class="error" *ngIf="loginForm.get('chapter')?.invalid && loginForm.get('email')?.touched">
+            Chapter is required.
+          </div>
+          
          
           <div class="d-flex row">
             <div class="col-4">
