--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -129,6 +129,7 @@ align-items: center; /* Align items vertically */
   <a class="nav-link" target="_blank" href="https://www.junioreconomicclub.org">HOME</a>
   <a class="nav-link" target="_blank" href="https://www.junioreconomicclub.org/about-us-mission">ABOUT US</a>
   <a class="nav-link" href="/#/events">EVENTS</a>
+  <a class="nav-link" href="/#/opportunities">OPPORTUNITIES</a>
   <a class="nav-link" target="_blank" href="https://www.junioreconomicclub.org/contact-us">CONTACT</a>
 
   <div class="flex-container"></div>
